# handshake_rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/interfaces/: request.rs  response.rs
src/shared_utils/: errors.rs
