[package]
name = "handshake_rs"
version = "0.1.0"
authors = ["bartOssh <lenart.consulting@gmail.com>", "opiechow <ospiechowski@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
actix-web = "1.0"
lambda_runtime = "0.2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
simple_logger = "1.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
